force-app/main/default/objects/Web_Content__c.object
<CustomObject>
    <fields>
        <fullName>Address_Token2_Lang__c</fullName>
        <inlineHelpText>Token = [school:address-2]</inlineHelpText>
        <label>Address/Campus 2 Language 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Token_Lang__c</fullName>
        <inlineHelpText>Token = [school:address]</inlineHelpText>
        <label>Address/Campus 1 Language 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Token__c</fullName>
        <inlineHelpText>Token = [school:address]</inlineHelpText>
        <label>Address/Campus 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Announcement_End_Date_Time__c</fullName>
        <label>Announcement End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Announcement_Preview__c</fullName>
        <inlineHelpText>The announcement preview will be refreshed based on the text entered when the record is saved</inlineHelpText>
        <label>Announcement Preview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement_Start_Date_Time__c</fullName>
        <label>Announcement Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apply_to__c</fullName>
        <label>Apply to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Staff Bios</fullName>
                </value>
                <value>
                    <fullName>Job Postings</fullName>
                </value>
                <value>
                    <fullName>Parent Testimonials</fullName>
                </value>
                <value>
                    <fullName>Staff Testimonials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Translator_Email__c</fullName>
        <label>Assigned Translator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_Translator_Name__c</fullName>
        <formula>LEFT(TEXT(Assigned_Translator__c), FIND(&quot; &quot;, TEXT(Assigned_Translator__c))-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Translator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Translator__c</fullName>
        <description>The translator that the translation has been assigned to. Also (indirectly) controls record sharing.</description>
        <label>Assigned Translator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laura González (Spanish 1)</fullName>
                </value>
                <value>
                    <fullName>Emma Watkins (Spanish 2)</fullName>
                </value>
                <value>
                    <fullName>Alexandra Mostaza (Spanish 3)</fullName>
                </value>
                <value>
                    <fullName>Sonia Fernandez (Spanish 4)</fullName>
                </value>
                <value>
                    <fullName>TBD (Spanish 5)</fullName>
                </value>
                <value>
                    <fullName>Tania Ramos (Portuguese 1)</fullName>
                </value>
                <value>
                    <fullName>TBD (Portuguese 2)</fullName>
                </value>
                <value>
                    <fullName>External Translator TBD (Portuguese 3)</fullName>
                </value>
                <value>
                    <fullName>Elena Savtsova (Russian 1)</fullName>
                </value>
                <value>
                    <fullName>Aziz Abdumukhtarov (Russian 2)</fullName>
                </value>
                <value>
                    <fullName>Oksana Zueva (Russian 3)</fullName>
                </value>
                <value>
                    <fullName>Test Translator (Spanish, Portuguese, Russian)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Translator_for_Sharing_Rule__c</fullName>
        <label>Assigned Translator for Sharing Rule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>This field captures the id of any attachment created in its parent record</description>
        <label>Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Available_Under_Web_Content_Name__c</fullName>
        <formula>Available_Under_Web_Content__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Under Web Content Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Under_Web_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Available Under Web Content</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (1 AND 4 AND 5)</booleanFilter>
            <errorMessage>Value does not exist, is not an &apos;EN&apos; (English) record or is not the correct record type.</errorMessage>
            <filterItems>
                <field>Web_Content__c.Language__c</field>
                <operation>equals</operation>
                <value>EN</value>
            </filterItems>
            <filterItems>
                <field>Web_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Normal Web Content</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Additional Navigable Content</value>
            </filterItems>
            <filterItems>
                <field>Web_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Additional Navigable Content, Normal Web Content</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Groupable</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Web_Content__c</referenceTo>
        <relationshipLabel>Additional Navigable Content &amp; Groupables</relationshipLabel>
        <relationshipName>Web_Sub_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_Icon__c</fullName>
        <inlineHelpText>By selecting one value, the block will show the corresponding icon (image)</inlineHelpText>
        <label>Block Icon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>news-events-icon</fullName>
                </value>
                <value>
                    <fullName>visual-tour-icon</fullName>
                </value>
                <value>
                    <fullName>parent-portal-icon</fullName>
                </value>
                <value>
                    <fullName>calendar-icon</fullName>
                </value>
                <value>
                    <fullName>world-class-icon</fullName>
                </value>
                <value>
                    <fullName>enquiry-icon</fullName>
                </value>
                <value>
                    <fullName>prospectus</fullName>
                </value>
                <value>
                    <fullName>world-map</fullName>
                </value>
                <value>
                    <fullName>phone-icon</fullName>
                </value>
                <value>
                    <fullName>find-us-icon</fullName>
                </value>
                <value>
                    <fullName>apply-icon</fullName>
                </value>
                <value>
                    <fullName>Footer Link</fullName>
                </value>
                <value>
                    <fullName>insight-icon</fullName>
                </value>
                <value>
                    <fullName>facebook-icon</fullName>
                </value>
                <value>
                    <fullName>twitter-icon</fullName>
                </value>
                <value>
                    <fullName>gplus-icon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booklet_1_Title_English__c</fullName>
        <label>Booklet 1 Title (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booklet_2_Title_English__c</fullName>
        <label>Booklet 2 Title (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booklet_3_Title_English__c</fullName>
        <label>Booklet 3 Title (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_1_Name__c</fullName>
        <description>For schools that have move than 1 campus. To show the name of the campus on group site (school node) and in Contact Us menu on school site.</description>
        <inlineHelpText>For schools that have move than 1 campus. Put the full name of the 1st campus here.</inlineHelpText>
        <label>Campus 1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_2_Name__c</fullName>
        <description>For schools that have move than 1 campus. To show the name of the campus on group site (school node) and in Contact Us menu on school site.</description>
        <inlineHelpText>For schools that have move than 1 campus. Put the full name of the 2nd campus here.</inlineHelpText>
        <label>Campus 2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Token_Lang__c</fullName>
        <inlineHelpText>Token = [school:city]</inlineHelpText>
        <label>City Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Token__c</fullName>
        <inlineHelpText>Token = [school:city]</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Email__c</fullName>
        <inlineHelpText>Token = [school:contact-us-email]
This field is also used to define the submission email of the Contact Us form on the website</inlineHelpText>
        <label>Contact Us Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Subtitle__c</fullName>
        <description>NB. If Web Content type = Home Page Picture Carousel this field is only applicable for the group website and defines the text in the bottom right corner of the home page pictures.</description>
        <label>Subtitle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_Title__c</fullName>
        <label>Section 1 Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent_Token_Lang__c</fullName>
        <inlineHelpText>Token = [school:continent]</inlineHelpText>
        <label>Continent Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent_Token__c</fullName>
        <inlineHelpText>Token = [school:continent]</inlineHelpText>
        <label>Continent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Token_Lang__c</fullName>
        <inlineHelpText>Token = [school:country]</inlineHelpText>
        <label>Country Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Token__c</fullName>
        <inlineHelpText>Token = [school:country]</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment_Id__c</fullName>
        <description>Captures the att id of any deleted attachment in its parent record</description>
        <label>Deleted Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deletion_Prevention__c</fullName>
        <formula>AND( 
    TEXT(Owner:User.School__c) = &quot;NAE&quot;, 
    OR( 
       INCLUDES(School_Override_Field__c, &quot;Marbella&quot;), 
       INCLUDES(School_Override_Field__c, &quot;Navarra&quot;), 
       INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;), 
       INCLUDES(School_Override_Field__c, &quot;New York&quot;), 
       INCLUDES(School_Override_Field__c, &quot;Group Site&quot;), 
       INCLUDES(School_Override_Field__c, &quot;Sandbox 1&quot;), 
       INCLUDES(School_Override_Field__c, &quot;Sandbox 2&quot;), 
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Marbella&quot;), 
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Navarra&quot;), 
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Brasilia&quot;), 
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;New York&quot;), 
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Group Site&quot;), 
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Sandbox 1&quot;), 
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Sandbox 2&quot;), 
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British International School of Marbella&quot;, 
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British School of Navarra&quot;, 
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British School of Brasilia&quot;, 
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The New York International School&quot;, 
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British Schools Foundation&quot; 
       ) 
   )</formula>
        <label>Deletion Prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desktop_Big_Quick_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box is you want your web block icon to be shown on the 3-icon region (under the main home page slideshow, only on desktop view).</inlineHelpText>
        <label>Desktop Big Quick Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desktop_Icon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want this record to be one of the three icons on the header of the site on the desktop version.</inlineHelpText>
        <label>Desktop Quick Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directions_Campus_1_Language_1__c</fullName>
        <inlineHelpText>Token: school:directions1-link
This field is used to define the target of any &apos;Get Directions&apos; links on the Contact Us page or menu item for the first or only campus in the first additional language</inlineHelpText>
        <label>Directions/Campus 1 Language 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directions_Campus_1__c</fullName>
        <inlineHelpText>Token: school:directions1-link
This field is used to define the target of any &apos;Get Directions&apos; links on the Contact Us page or menu item for the first or only campus</inlineHelpText>
        <label>Directions/Campus 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directions_Campus_2_Language_1__c</fullName>
        <inlineHelpText>Token: school:directions2-link
This field is used to define the target of any &apos;Get Directions&apos; links on the Contact Us page or menu item for the first or only campus in the first additional language</inlineHelpText>
        <label>Directions/Campus 2 Language 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directions_Campus_2__c</fullName>
        <inlineHelpText>Token: school:directions2-link 
This field is used to define the target of any &apos;Get Directions&apos; links on the Contact Us page or menu item for the second campus</inlineHelpText>
        <label>Directions/Campus 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_Token__c</fullName>
        <inlineHelpText>Token = [school:domain]
Please write the url without http://www or trailing slash</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Token__c</fullName>
        <inlineHelpText>Token = [school:email]</inlineHelpText>
        <label>General Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Email_school_employ_email__c</fullName>
        <inlineHelpText>Token = [school:employ-email]
This field is also used to define the submission email of the default Employment Application form on the website</inlineHelpText>
        <label>Employment Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points at the parent (english) version of this record</description>
        <label>English Parent</label>
        <referenceTo>Web_Content__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translated_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Link__c</fullName>
        <description>Use for external links for a web block on the school sites</description>
        <label>External Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Token__c</fullName>
        <inlineHelpText>Token = [school:facebook]
Please write in this field what needs to be appended to the url of the account (e.g. what comes after &apos;https://www.facebook.com/&apos;)</inlineHelpText>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_1_English__c</fullName>
        <inlineHelpText>Limited to 4 symbols. Use short numeric fact, i.e. &apos;2007&apos; for the opening year.</inlineHelpText>
        <label>Fact 1 (English)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_1_Suffix_English__c</fullName>
        <inlineHelpText>Limited to 21 symbols. Put a description for Fact 1 in 1 or max 2 words</inlineHelpText>
        <label>Fact 1 Suffix (English)</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_1_Suffix__c</fullName>
        <description>Used as a description for the Fact 1 on the group site in the &apos;teaser&apos; box on the left hand side on a school node.</description>
        <inlineHelpText>Limited to 20 symbols. Put a description for Fact 1 in 1 or max 2 words</inlineHelpText>
        <label>Fact 1 Suffix</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_1__c</fullName>
        <description>Fact 1 about the school. Used on the group site in the &apos;teaser&apos; box on the left hand side of the school node.</description>
        <inlineHelpText>Limited to 4 symbols. Use short numeric fact, i.e. &apos;2007&apos; for the opening year.</inlineHelpText>
        <label>Fact 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_2_English__c</fullName>
        <inlineHelpText>Limited to 4 symbols. Use short numeric fact, i.e. &apos;2007&apos; for the opening year.</inlineHelpText>
        <label>Fact 2 (English)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_2_Suffix_English__c</fullName>
        <inlineHelpText>Limited to 20 symbols. Put a description for Fact 1 in 1 or max 2 words</inlineHelpText>
        <label>Fact 2 Suffix (English)</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_2_Suffix__c</fullName>
        <description>Used as a description for the Fact 1 on the group site in the &apos;teaser&apos; box on the left hand side on a school node.</description>
        <inlineHelpText>Limited to 20 symbols. Put a description for Fact 1 in 1 or max 2 words.</inlineHelpText>
        <label>Fact 2 Suffix</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_2__c</fullName>
        <description>Fact 2 about the school. Used on the group site in the &apos;teaser&apos; box on the left hand side of the school node.</description>
        <inlineHelpText>Limited to 4 symbols. Use short numeric fact, i.e. &apos;2007&apos; for the opening year.</inlineHelpText>
        <label>Fact 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Booklets__c</fullName>
        <inlineHelpText>Select 1, 2, 3 or 4 to show the corresponding booklet in the &quot;Handbooks&quot; / &quot;All Booklets&quot; sidebar block on the website</inlineHelpText>
        <label>Featured Booklets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Featured_Videos__c</fullName>
        <inlineHelpText>Select 1, 2, 3 or 4 to show the corresponding video in the &quot;School Videos&quot; sidebar block on the website NB. See help tip on the &apos;Video Link&apos; field to define the ordering of videos in the sidebar block.</inlineHelpText>
        <label>Featured Videos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gallery_Order__c</fullName>
        <inlineHelpText>Use this field to organise photo albums in gallery blocks on the site, ie: Photo Gallery or Visual Tour. Enter a value between 1 and 99 - the lower the number the more prominent the placement (e.g. first in a sidebar, top of &apos;Photo Gallery&apos; page etc.)</inlineHelpText>
        <label>Gallery Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Map__c</fullName>
        <description>Field to output a google map on NWC records. Indicated to display the school&apos;s map on contact us pages. Also, this field will show right under the subtitle of the node on the website.</description>
        <inlineHelpText>Type a google formatted address to display the google map of the school on the website&apos;s node.</inlineHelpText>
        <label>Google Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Maps__c</fullName>
        <description>new google maps field</description>
        <inlineHelpText>this is a test field</inlineHelpText>
        <label>Google Maps</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Token__c</fullName>
        <inlineHelpText>Token = [school:google-plus]
Please write in this field what needs to be appended to the url of the account (e.g. what comes after &apos;https://plus.google.com/&apos;)</inlineHelpText>
        <label>Google+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groupable_Preview_Text_English__c</fullName>
        <label>Preview Text (English)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Groupable_Preview_Text__c</fullName>
        <inlineHelpText>Shows when a user hovers over the image on the NWC or ANC that the Groupable is created under. If left blank this will instead be taken from the beginning of the &apos;Main Text&apos; field of the Groupable.</inlineHelpText>
        <label>Preview Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Headteacher__c</fullName>
        <label>Headteacher</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_From_Navigation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this field if you don&apos;t want this record to be included in the main menu structure of the site.</inlineHelpText>
        <label>Hide From Navigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdText__c</fullName>
        <label>IdText</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Photos_in_a_Gallery__c</fullName>
        <inlineHelpText>Select one or more areas of the website where you want to show the photos of this record.</inlineHelpText>
        <label>Include Photos in Gallery</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Photo Gallery</fullName>
                </value>
                <value>
                    <fullName>Visual Tour</fullName>
                </value>
                <value>
                    <fullName>Facilities Sidebar</fullName>
                </value>
                <value>
                    <fullName>Facilities Gallery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Link_Title_English__c</fullName>
        <label>Link Title (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Link_Title__c</fullName>
        <description>Together with the Internal Link lookup field you can construct a custom link on the Web Block node on the school website.</description>
        <inlineHelpText>Define the title of the internal link which will be visible only on supported web blocks (currently just the &apos;Our Foundation&apos; link on the &apos;Global Network&apos; block).</inlineHelpText>
        <label>Link Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to create internal links to the own site when creating a Web Block.</description>
        <label>Internal Link</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The &apos;Internal Link&apos; must be to a record of the same language with its own URL</errorMessage>
            <filterItems>
                <field>Web_Content__c.Language__c</field>
                <operation>equals</operation>
                <valueField>$Source.Language__c</valueField>
            </filterItems>
            <filterItems>
                <field>Web_Content__c.RecordType.Name</field>
                <operation>contains</operation>
                <value>Additional Navigable Content, Normal Web Content, Groupable</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Web_Content__c</referenceTo>
        <relationshipLabel>Web Blocks Linking to this Record</relationshipLabel>
        <relationshipName>web_content_link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <inlineHelpText>Enter any special notes about the record and how it&apos;s used to inform other users. This field is not visible anywhere on the website.</inlineHelpText>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issuu_1_Script__c</fullName>
        <label>Booklet 1 Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issuu_1_Title__c</fullName>
        <label>Booklet 1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuu_2_Script__c</fullName>
        <label>Booklet 2 Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issuu_2_Title__c</fullName>
        <label>Booklet 2 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuu_3_Script__c</fullName>
        <label>Booklet 3 Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issuu_3_Title__c</fullName>
        <label>Booklet 3 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuu_Embed_Field__c</fullName>
        <label>External Embed Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language switch for website translation management.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Translation_Completed_By__c</fullName>
        <label>Last Translation Completed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Translation_Completed__c</fullName>
        <label>Last Translation Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_Title_10__c</fullName>
        <label>Link Title 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Title_11__c</fullName>
        <label>Link Title 11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Title_12__c</fullName>
        <label>Link Title 12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL_10__c</fullName>
        <label>Link URL 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_11__c</fullName>
        <label>Link URL 11</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_URL_12__c</fullName>
        <label>Link URL 12</label>
        <type>Url</type>
    </fields>
</CustomObject>